src/test/resources/wacc_examples/valid/stdlib/canImportstdlib.wacc
# check to make sure we can import "stdlib.wacc". i.e. should not throw semantic error even though there
# is no stdlib.wacc in the same directory as the test

# Output:

# Program:

begin
  include "stdlib.wacc"
  skip
end