src/test/resources/wacc_examples/invalid/semanticErr/imports/importFilePathNotFound.wacc
# tries to import a file which does not exist

# Output:
# Semantic error

# Program:

begin
    include "filenothere.wacc"
    skip
end